# planpro-exporter

./: pyproject.toml
planproexporter/planproxml/: edgexml.py  signalxml.py
