[tool.poetry]
name = "planpro-exporter"
version = "0.9"
description = ""
authors = ["HPI OSM <OSM@HPI>"]
readme = "README.md"
packages = [{include = "planproexporter"}]

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
